--- a/BizHawk.Client.EmuHawk/BizHawk.Client.EmuHawk.csproj
+++ b/BizHawk.Client.EmuHawk/BizHawk.Client.EmuHawk.csproj
@@ -1088,6 +1088,12 @@
     <Compile Include="tools\PCE\PCETileViewer.Designer.cs">
       <DependentUpon>PCETileViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="tools\Python\PythonConsole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tools\Python\PythonConsole.Designer.cs">
+      <DependentUpon>PythonConsole.cs</DependentUpon>
+    </Compile>
     <Compile Include="tools\SMS\VDPViewer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1676,6 +1682,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="tools\PCE\PCETileViewer.resx">
       <DependentUpon>PCETileViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="tools\Python\PythonConsole.resx">
+      <DependentUpon>PythonConsole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="tools\SMS\VDPViewer.resx">
       <DependentUpon>VDPViewer.cs</DependentUpon>
